# edu-verify

./: .env  .gitignore  Cargo.toml  app.py
contracts/: CertificateVerifier.abi  CertificateVerifier.sol  Halo2Verifier.sol  ShplonkVerifier.sol
data/: 2025届软件工程学院硕士毕业信息.xlsx
src/: main.rs  models.rs
src/handler/: company.rs  mod.rs  school.rs  student.rs
src/services/: certificate.rs  circuit.rs  commit.rs  ethereum.rs  ipfs.rs  mod.rs  poseidon.rs  shplonk.rs  shplonk_inner.rs  util.rs
static/js/: main.js  school_upload.js  verify.js
templates/: company_confirm_result.html  company_submit_verification.html  company_verify.html  index.html  school_data_check.html  school_upload_data.html  student_generate_authentication.html  student_upload_data.html  styles.css
