[package]
name = "edu-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
web3 = "0.18"
sha3 = "0.10"
hex = "0.4"
anyhow = "1.0"
base64 = "0.13"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ipfs-api-backend-hyper = "0.6"
chrono = "0.4"
zip = "0.6"
futures-util = "0.3"
futures = "0.3"
rand = "*"

ark-bn254 = "0.4.0"
ark-ec = {version = "0.4", features=["parallel"]}
ark-poly = {version = "0.4", features=["parallel"]}
ark-ff = "0.4.0"
rand_chacha = "0.3.1"
rayon = "1.10.0"

pse-poseidon = { git = "ssh://git@github.com/axiom-crypto/pse-poseidon.git" }
snark-verifier-sdk = { git = "ssh://git@github.com/axiom-crypto/snark-verifier.git", branch = "community-edition", features=["revm"]}
indexmap = {version = "2.7.1", features = ["serde"]}
lazy_static = "1.5.0"